components/support/error/tests/return_not_result.stderr
error: Expected a Result<T> or Result<T, E>
  --> tests/return_not_result.rs:31:15
   |
31 |  fn func() -> String {
   |               ^^^^^^
